working Phase 2 skeleton producing a real report on dummy model

--- a/templates/report_template.html
+++ b/templates/report_template.html
@@ -74,7 +74,7 @@
   <ul>
     <li>Params: {{ report.steps.efficiency.params }}</li>
     <li>Model size: {{ report.steps.efficiency.model_size_mb }} MB</li>
-    <li>Latency: {{ report.steps.efficiency.latency_ms }} ms</li>
+    <li>Latency: {{ report.steps.efficiency.latency_s_per_image }} ms</li>
   </ul>
 </body>
 </html>
